2.1.0 - Added support for custom timestamp formats (see Wiki on how to use this feature) (thanks to richardprior)
      - Added support for SQL Server 2012 (2.0.0 was already compatible but we've added an official provider now)
2.0.0 - Added support for SQL Server CE 3.5 (thanks to balistof)
      - Duplicate migration exports are detected before actual migration execution
      - API:
        - IMigrationBatch now lists:
		  - migrations scheduled for execution
		  - migrations executed server-side but unknown to the application (used to detect if an application is out-of-date)
        - Removed Migrator.IsUpToDate as it is ambiguous and incurs an extra round-trip to the database (use FetchMigrations instead)
		- IVersioning: implementors need to return all executed migrations instead of answering Contains(...)
		- IVersioning and MigrationEventArgs: use the new IScheduledMigrationMetadata interface which contains the direction
      - BUG FIXES:
	    - SQL Server 2005/2008:
		  - before dropping a column, drop its default constraint (if exists) (thanks to rmotyka)
        - SQL Server CE 4:
		  - allow GUIDs to be used as primary keys (thanks to lestermat)
		- Teradata:
	      - stop creating *_0 tables when adding foreign keys
1.1.0 - Added support for SQLite (without foreign keys)
      - Added support for SQL scripting: instead of executing migrations against a database, they can be scripted into files
	  - Added command-line interface: Migrate.exe, a console application
      - Added support for retrieving migrations from multiple assemblies (thanks to FlorianHoornaar)
      - Extended/completed list of allowed primary key data types for all providers
	  - Providers define themselves which data-types can be used for identity columns
	    - this allows to use decimals without scale for SQL Server, Oracle, and Teradata
	  - Extended API to allow renaming of primary keys