@@ -1,0 +1,73 @@
+﻿using System;
+using System.Data;
+
+namespace MigSharp.Process
+{
+    internal class DbConnectionWrapper : IDbConnection
+    {
+        private readonly IDbConnection _connection;
+
+        internal DbConnectionWrapper(IDbConnection connection)
+        {
+            if (connection == null) throw new ArgumentNullException("connection");
+
+            _connection = connection;
+        }
+
+        public void Dispose()
+        {
+            // ignore
+        }
+
+        public IDbTransaction BeginTransaction()
+        {
+            return _connection.BeginTransaction();
+        }
+
+        public IDbTransaction BeginTransaction(IsolationLevel il)
+        {
+            return _connection.BeginTransaction(il);
+        }
+
+        public void Close()
+        {
+            // ignore
+        }
+
+        public void ChangeDatabase(string databaseName)
+        {
+            _connection.ChangeDatabase(databaseName);
+        }
+
+        public IDbCommand CreateCommand()
+        {
+            return _connection.CreateCommand();
+        }
+
+        public void Open()
+        {
+            throw new InvalidOperationException("Open should not be called on the DbConnectionWrapper.");
+        }
+
+        public string ConnectionString
+        {
+            get { return _connection.ConnectionString; }
+            set { _connection.ConnectionString = value; }
+        }
+
+        public int ConnectionTimeout
+        {
+            get { return _connection.ConnectionTimeout; }
+        }
+
+        public string Database
+        {
+            get { return _connection.Database; }
+        }
+
+        public ConnectionState State
+        {
+            get { return _connection.State; }
+        }
+    }
+}
